@@ -55,7 +55,7 @@ Misc.
 -----
 	[/]  CommandInterpreter:
 		[X]  Tab completion of methods!
-		[ ]  Tab completion of state variables!
+		[X]  Tab completion of state variables!
 		[ ]  Tab completion for the 'add' command: component-name
 		[ ]  Help on Method arguments? E.g. cpu.unassemble [addr]
 		[X]  "Methods" on objects? E.g.
@@ -65,6 +65,7 @@ Misc.
 		[X]  Short form:  cpu.u
 		     When searching for substrings, try e.g. "cpu.u" first,
 		     then "cpu".
+		[X]  Show state variable values when "executing" them
 		[ ]  State variable assignments? (causes an Action to be
 		     executed, which allows Undo.)
 
